add async profiler