@@ -11,8 +11,10 @@
   :dependencies [[org.clojure/clojure "1.9.0"]]
   :profiles {:clojure-1.9.0 {:dependencies [[org.clojure/clojure "1.9.0"]]}
              :clojure-1.10.1 {:dependencies [[org.clojure/clojure "1.10.1"]]}
-             :test {:dependencies [[clj-commons/conch "0.9.2"]
-                                   [criterium "0.4.5"]]}
+             :test {:jvm-opts ["-Djdk.attach.allowAttachSelf"]
+                    :dependencies [[clj-commons/conch "0.9.2"]
+                                   [criterium "0.4.5"]
+                                   [com.clojure-goes-fast/clj-async-profiler "0.4.0"]]}
              :uberjar {:global-vars {*assert* false}
                        :jvm-opts ["-Dclojure.compiler.direct-linking=true"
                                   "-Dclojure.spec.skip-macros=true"]
